Starter for integrity check.